--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,4 +1,3 @@
-
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -50,7 +49,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: #0088FE;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -117,10 +116,10 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
-    overflow-x: hidden
   }
+
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 }
-
